2010-12-09  Yong Li  <yoli@rim.com>

Reviewed by Darin Adler.

        Check the return value of ImageBuffer::create()
        to avoid crash when ImageBuffer::create() fails.
        https://bugs.webkit.org/show_bug.cgi?id=50631

        No new test because it relies on the platform implementation
        of ImageBuffer. It is hard to make ImageBuffer::create() fail
        in most ports.

        * platform/graphics/GeneratedImage.cpp:
        (WebCore::GeneratedImage::drawPattern):

Canonical link: https://commits.webkit.org/64030@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@73622 268f45cc-cd09-0410-ab3c-d52691b4dbfc